<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Background"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".screens.DetalesFragment">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/detal_header"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView23">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/name"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/name_edit_txt"

                    style="@style/detal_edit_txt"
                    android:layout_width="match_parent"
                    android:hint="@string/name"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/cmp"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/compony_edit_txt"
                    style="@style/detal_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cmp"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/size"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/size_edit_txt"
                    style="@style/detal_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/size"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/detal"
                    android:textColor="@color/red"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/description_edit_txt"
                    style="@style/detal_edit_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/detal"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/white" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/Background"
                android:minHeight="48dp"
                android:text="@android:string/cancel"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/save_btn"
                style="@style/detal_btn"
                android:layout_margin="10dp"
                android:text="@string/save"
                app:cornerRadius="10dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>